# DepthSensing

./: CMakeLists.txt  DrawingEdgeDetect.sln  README.md
DrawingEdgeDetect/: DrawingEdgeDetect.vcxproj  DrawingEdgeDetect.vcxproj.filters  app.cpp
depth_filtering/: CMakeLists.txt
depth_filtering/src/: main.cpp
depth_image/: CMakeLists.txt
depth_image/src/: main.cpp
